Nest allele API under chromosomes
